# file_storage_api

./: .autopep8  .env  .gitignore  Dockerfile  README.md  alembic.ini  celery_app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
file_storage_api/: auth.py  database.py  main.py  minio_client.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 7dcfd105e03c_initial_tables.py  cf98958d3137_initial_tables.py
src/: Dockerfile  alembic.ini  celery_app.py
src/app/: config.py  database.py  deps.py  main.py  run.py
src/app/auth/: models.py  routes.py  schemas.py  security.py
src/app/common/: enums.py
src/app/files/: models.py  routes.py  schemas.py  service.py  tasks.py
src/app/files/utils/: metadata_extractors.py
src/app/storage/: __init__.py  minio_client.py  s3.py
src/app/users/: routes.py
src/file_storage_api/: auth.py  config.py  database.py  dependencies.py  main.py  minio_client.py  models.py  schemas.py  tasks.py
